# DRZAuthenticator

./: .coverage  .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml  pyvenv.cfg  requirements.txt  setup.sh
src/: encryption_utils.py  key.env  lang_en.json  lang_es.json  lang_pt.json  main.py  totp_app.py  totp_encrypted_storage.py  totp_keys (Cópia 2).json  totp_keys.json  totp_storage.py  ui_theme.py
tests/: conftest.py  test_app.py  test_import.py  test_storage.py  test_validation.py  test_version.py
